--- a/liquibase/liquibase.properties
+++ b/liquibase/liquibase.properties
@@ -2,6 +2,6 @@ url=jdbc:mysql://localhost:3306/status_poc
 username=root
 password=eyroot
 driver=com.mysql.cj.jdbc.Driver
-classpath=liquibase/lib/mysql-connector-j-9.4.0.jar
-changeLogFile=liquibase/changelog/db.changelog-master.xml
-
+classpath=lib/mysql-connector-j-9.4.0.jar
+changeLogFile=db.changelog-master.xml
+searchPath=changelog
