Major project cleanup and reorganization
 Cleanup completed:
- Removed duplicate files (gui copy.py)
- Cleaned up auto-generated data (bytebase-data/, __pycache__)
- Consolidated documentation
- Standardized migration file naming
- Added comprehensive .gitignore

 Project enhancements:
- Complete code review and fixes
- Professional GUI with 5-tab interface
- Full web interface system
- Comprehensive testing suite
- Cleaned project structure

 Ready for production use with all three migration tools:
- Bytebase (Docker + API integration)
- Liquibase (Enterprise CLI + Web UI)
- Redgate (Professional simulation + Web UI)

--- a/bytebase/bytebase-config.yaml
+++ b/bytebase/bytebase-config.yaml
@@ -1,11 +1,23 @@
-name: bytebase-poc
-environment: local
+# Bytebase Enterprise Configuration
+name: enterprise-migration-poc
+environment: development
+description: "Professional database migration tool comparison"
+
 database:
   type: mysql
   host: localhost
   port: 3306
   username: root
-  database: poc_db
+  database: status_poc
+  
 migrations:
   folder: migrations
   order: filename
+  validation: true
+  backup_before_deploy: true
+  
+enterprise_features:
+  sql_review: enabled
+  approval_workflow: enabled
+  audit_logging: enabled
+  schema_drift_detection: enabled
