--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 python-dotenv
 mysql-connector-python
 pyodbc
+requests
+flask
+blinker
+click
+itsdangerous
+jinja2
+markupsafe
+werkzeug
+colorama
