Adding Microsoft SQL to GUI but confusion with migrations now

--- a/liquibase/liquibase.properties
+++ b/liquibase/liquibase.properties
@@ -1,7 +1,4 @@
-url=jdbc:mysql://localhost:3306/status_poc
-username=root
-password=eyroot
-driver=com.mysql.cj.jdbc.Driver
-classpath=lib/mysql-connector-j-9.4.0.jar
-changeLogFile=db.changelog-master.xml
-searchPath=changelog
+# Fallback Liquibase properties for SQL Server (Named Instance)
+url=jdbc:sqlserver://localhost;instanceName=SQLEXPRESS;databaseName=MigrationPOC;integratedSecurity=true;encrypt=false
+driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+changeLogFile=changelog/db.changelog-master.xml
