--- a/liquibase/liquibase.properties
+++ b/liquibase/liquibase.properties
@@ -1,4 +1,6 @@
-# Fallback Liquibase properties for SQL Server (Named Instance)
-url=jdbc:sqlserver://localhost;instanceName=SQLEXPRESS;databaseName=MigrationPOC;integratedSecurity=true;encrypt=false
-driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-changeLogFile=changelog/db.changelog-master.xml
+# Temporary Liquibase properties for MySQL
+url=jdbc:mysql://localhost:3306/status_poc?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+username=root
+password=eyroot
+driver=com.mysql.cj.jdbc.Driver
+changeLogFile=changelog/mysql/db.changelog-master.xml
