--- a/liquibase/liquibase.properties
+++ b/liquibase/liquibase.properties
@@ -1,6 +1,4 @@
-# Temporary Liquibase properties for MySQL
-url=jdbc:mysql://localhost:3306/status_poc?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-username=root
-password=eyroot
-driver=com.mysql.cj.jdbc.Driver
-changeLogFile=changelog/mysql/db.changelog-master.xml
+# Fallback Liquibase properties for SQL Server (Named Instance)
+url=jdbc:sqlserver://localhost:1433;databaseName=MigrationPOC;integratedSecurity=true;encrypt=false
+driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+changeLogFile=microsoft_sql/changelog/db.changelog-master.xml
