--- a/liquibase/microsoft_sql/gui_config.json
+++ b/liquibase/microsoft_sql/gui_config.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": "1433",
   "database": "MigrationPOC",
-  "username": "",
+  "username": "root",
   "password": "",
   "trusted_connection": true
 }
