Microsoft SQL Liuibase limitation

--- a/liquibase/microsoft_sql/liquibase.properties
+++ b/liquibase/microsoft_sql/liquibase.properties
@@ -1,4 +1,4 @@
 # Liquibase properties for Microsoft SQL Server
-url=jdbc:sqlserver://localhost;instanceName=SQLEXPRESS;databaseName=status_poc;integratedSecurity=true;encrypt=false
+url=jdbc:sqlserver://localhost;databaseName=MigrationPOC;integratedSecurity=true;encrypt=false;trustServerCertificate=true
 driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 changeLogFile=changelog/db.changelog-master.xml
