--- a/gui_config.json
+++ b/gui_config.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": "1433",
   "database": "MigrationPOC",
-  "username": "",
-  "password": "",
+  "username": "root",
+  "password": "eyroot",
   "trusted_connection": true
 }
